--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100;200;300;400;500;600;700;800&family=Roboto:wght@100;300;400;500;700&display=swap");
 
 /*  ---Codigo general---  */
 
@@ -10,7 +11,7 @@
 
 html {
   font-size: 62.5%;
-  font-family: 'Comfortaa', cursive;
+  font-family: 'Comfortaa', "Roboto", sans-serif;
 }
 
 a{
