--- a/style/toggle-switch.css
+++ b/style/toggle-switch.css
@@ -1,7 +1,15 @@
+.controls{
+  display: flex;
+  justify-content: end;
+}
+.textDarkMode{
+  display: flex;
+  align-items: center;
+  padding-top: 8px;
+  font-size: 1.1rem;
+  margin-right: 2px;
+}
 .toggle-switch {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
     margin: 9px 14px 0 0;
     color: var(--white);
   }
